--- a/style.css
+++ b/style.css
@@ -84,3 +84,36 @@ button.sign2{
     background: #3882f6;
     border: 1px solid white;
 }
+
+.top{
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+    padding: 50px;
+}
+
+.descriptor{
+    font-weight: 900;
+    font-size: 36px;
+    color: #1f2937;
+    text-align: center;
+}
+
+.container{
+    display: flex;
+    justify-content: center;
+    gap: 60px;
+}
+
+.box{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    gap: 10px;
+    max-width: 150px;
+}
+
+img{
+    border-radius: 10px;
+}
