--- a/style.css
+++ b/style.css
@@ -117,3 +117,17 @@ button.sign2{
 img{
     border-radius: 10px;
 }
+
+.middle{
+    display: flex;
+    flex-direction: column;
+    background-color: #e5e7eb;
+    border: 0;
+    margin: 0;
+}
+
+.quote{
+    font-style: italic;
+    font-size: 36px;
+    color: #1f2937;
+}
