--- a/style.css
+++ b/style.css
@@ -121,13 +121,23 @@ img{
 .middle{
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     background-color: #e5e7eb;
     border: 0;
     margin: 0;
+    padding: 100px 325px 100px 325px;
+    gap: 10px;
 }
 
 .quote{
     font-style: italic;
+    font-weight: 200;
     font-size: 36px;
     color: #1f2937;
+}
+
+.quoter{
+    font-weight: bold;
+    font-size: 24px;
+    text-align: right;
 }
